# nd064_techtrends

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-commands  logs.py  poetry-requirements.txt  pyproject.toml  schema.sql
.github/workflows/: techtrends-dockerhub.yml
argocd/: helm-techtrends-prod.yaml  helm-techtrends-staging.yaml
helm/: Chart.yaml  values-prod.yaml  values-staging.yaml  values.yaml
helm/templates/: deploy.yaml  service.yaml
kubernetes/: deploy.yaml  namespace.yaml  service.yaml
